<resources>
    <string name="app_name">ClothingWarehouseManagement</string>
    <string name="login">登录</string>
    <string name="query">搜索</string>
    <string name="shelfID">货架号</string>
    <string name="storageLocation">货位号</string>
    <string name="quantity">数量</string>
    <string name="refresh">刷新</string>
    <string name="hanle">处理</string>
    <string name="check">检查</string>
    <string name="staff">人员</string>
    <string name="choiceStaff">请选择员工</string>
    <string name="choiceShelf">请选择货架</string>
</resources>
