<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckACT.CheckActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:text="@string/shelfID"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:text="@string/staff"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Spinner
            android:id="@+id/spinner_shelf_act_check"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:prompt="@string/choiceShelf"
            android:entries="@array/shelves"
            android:spinnerMode="dialog"/>
        <Spinner
            android:id="@+id/spinner_staff_act_check"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:prompt="@string/choiceStaff"
            android:entries="@array/shelves"
            android:spinnerMode="dialog"/>
        <Button
            android:id="@+id/button_act_check"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_act_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>